--- a/conf/desktop/etc/i3status.conf
+++ b/conf/desktop/etc/i3status.conf
@@ -10,7 +10,7 @@ general {
 
 order += 'usbguard'
 order += 'yubikey'
-#order += 'external_script checkofficial'
+order += 'external_script checkofficial'
 order += 'external_script checkupdates'
 order += 'external_script checkupdates_aur'
 order += 'external_script checkfirmware'
@@ -60,41 +60,41 @@ external_script checkofficial {
   cache_timeout = 1200
   button_show_notification = 1
   script_path = "check-aur-became-official"
-  format = '\?if=line&color=degraded 󰀽  official {line}'
+  format = '\?if=lines&color=degraded 󰀽  official {lines}'
 }
 
 external_script checkupdates {
   cache_timeout = 1200
   button_show_notification = 1
   script_path = "if is_online; then checkupdates; fi"
-  format = '\?if=line&color=degraded 󰀾  {line}'
+  format = '\?if=lines&color=degraded 󰀾  {lines}'
 }
 
 external_script checkupdates_aur {
   cache_timeout = 1200
   button_show_notification = 1
   script_path = "if is_online; then aur repo -Su -d couldinho-arch-aur; fi"
-  format = '\?if=line&color=degraded 󰀽  {line}'
+  format = '\?if=lines&color=degraded 󰀽  {lines}'
 }
 
 external_script checkupdates_vcs {
   cache_timeout = 1200
   button_show_notification = 1
   script_path = "if is_online; then aur vercmp devel; fi"
-  format = '\?if=line&color=degraded 󰀼  {line}'
+  format = '\?if=lines&color=degraded 󰀼  {lines}'
 }
 
 external_script checkrebuild {
   cache_timeout = -1
   button_show_notification = 1
   script_path = "checkrebuild | grep maximbaz || true"
-  format = '\?if=line&color=degraded 󰁂  {line}'
+  format = '\?if=lines&color=degraded 󰁂  {lines}'
 }
 
 external_script checkfirmware {
   cache_timeout = 43200   # twice a day
   script_path = "fwupdmgr refresh >/dev/null; fwupdmgr get-updates 2>/dev/null"
-  format = '\?if=line&color=degraded '
+  format = '\?if=lines&color=degraded '
   on_click 1 = 'exec notify-send "Firmware updates" "$ fwupdmgr get-updates\\n$ fwupdmgr update"'
 }
 
@@ -102,7 +102,7 @@ external_script pacdiff {
   cache_timeout = -1
   button_show_notification = 1
   script_path = "pacdiff -o"
-  format = '\?if=line&color=degraded   {line}'
+  format = '\?if=lines&color=degraded   {lines}'
 }
 
 keyboard_layout {
@@ -176,13 +176,8 @@ xrandr_rotate {
 }
 
 usbguard {
-  allow_urgent = True
-  filters = ['block']
-  format = '[{format_device}]'
-  format_device = ' {format_action_reject} [{name}|{usb_id}] {format_action_allow} '
-  format_action_allow = ''
-  format_action_reject = ''
-  format_notification_message = ''
+  format_button_allow = '  '
+  format_button_reject = '  '
 }
 
 yubikey {
