--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=11
+pkgrel=12
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -378,7 +378,11 @@ package_couldinho-sec() {
         radare2                 # Command line reverse engineering framework
         ida-free                # Hexrays reversen engineering framework
         ghidra-bin              # Reverse engineering framework similar to IDA
-        gef-git                 # GDB Enhanced Features
         rr                      # Replaying debugger
+        gef-git                 # GDB Enhanced Features
+        python-capstone         # GEF optional dependency
+        python-unicorn          # GEF optional dependency
+        python-keystone         # GEF optional dependency
+        python-ropper           # GEF optional dependency
     )
 }
