--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=12
+pkgrel=13
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -370,7 +370,7 @@ package_couldinho-sec() {
 
     # Binary
     depends+=(
-        010editor               # Text/hex editor with templates
+        #010editor               # Text/hex editor with templates
     )
 
     # Reversing
