--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=17
+pkgrel=18
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -379,6 +379,7 @@ package_couldinho-sec() {
         ida-free                # Hexrays reversen engineering framework
         ghidra-bin              # Reverse engineering framework similar to IDA
         rr                      # Replaying debugger
+        voltron-git             # A more useful display for GDB
         gef-git                 # GDB Enhanced Features
         python-capstone         # GEF optional dependency
         python-unicorn          # GEF optional dependency
