--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -287,6 +287,7 @@ package_couldinho-desktop() {
         python-pillow       	# Used to view pictures within ranger
         freerdp             	# Remote desktop client
         xsecurelock             # Desktop lock screen
+        gdb                     # GNU debugger TODO: Move to dev
     )
 
     install -Dm 0644 desktop/etc/xdg/kitty/diff.conf "$pkgdir/etc/xdg/kitty/diff.conf"
