--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=25
+pkgrel=26
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -377,6 +377,7 @@ package_couldinho-sec() {
     # Network
     depends+=(
         nmap                    # Network mapper
+        wireshark               # Network analyzer
     )
 
     # Reversing
