--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=30
+pkgrel=31
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -418,5 +418,5 @@ package_couldinho-laptop() {
     install -Dm 0644 laptop/etc/rofi.conf "$pkgdir/etc/couldinho-laptop-rofi.conf"
     install -Dm 0644 laptop/etc/xdg/kitty/kitty.conf "$pkgdir/etc/xdg/kitty/couldinho-laptop-kitty.conf"
     install -Dm 0644 laptop/usr/share/X11/xorg.conf.d/40-libinput.conf \
-        "$pkgdir/usr/share/X11/xorg.conf.d/40-libinput.conf"
+        "$pkgdir/usr/share/X11/xorg.conf.d/couldinho-laptop-40-libinput.conf"
 }
