--- a/conf/laptop/etc/i3status.conf
+++ b/conf/laptop/etc/i3status.conf
@@ -92,7 +92,7 @@ external_script checkofficial {
 external_script checkupdates {
   cache_timeout = 1200
   button_show_notification = 1
-  script_path = "if is_online; then checkupdates; fi"
+  script_path = "if is_online; then checkupdates || true; fi"
   format = '\?if=line&color=degraded 󰀾  {line}'
 }
 
