--- a/conf/desktop/etc/xdg/kitty/kitty.conf
+++ b/conf/desktop/etc/xdg/kitty/kitty.conf
@@ -1,5 +1,5 @@
 allow_remote_control             yes
-font_family			             Inconsolata
+font_family			             Inconsolata Nerd Font Complete Mono
 font_size                        11
 scrollback_lines                 100000
 mouse_hide_wait                  0
