--- a/conf/laptop/etc/i3status.conf
+++ b/conf/laptop/etc/i3status.conf
@@ -228,13 +228,8 @@ xrandr_rotate {
 }
 
 usbguard {
-  allow_urgent = True
-  filters = ['block']
-  format = '[{format_device}]'
-  format_device = ' {format_action_reject} [{name}|{usb_id}] {format_action_allow} '
-  format_action_allow = ''
-  format_action_reject = ''
-  format_notification_message = ''
+  format_button_allow = '  '
+  format_button_reject = '  '
 }
 
 yubikey {
