--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=41
+pkgrel=42
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -314,6 +314,11 @@ package_couldinho-desktop() {
         pepper-flash            # Flash player
         x265                    # Video compression
         browserpass-chromium    # Browser extenson for pass
+    )
+
+    # Utils
+    depends+=(
+        wire-desktop-beta       # Encrypted messenger
     )
 
     # General scripts
