--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=42
+pkgrel=43
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -318,7 +318,7 @@ package_couldinho-desktop() {
 
     # Utils
     depends+=(
-        wire-desktop-beta       # Encrypted messenger
+        #wire-desktop-beta       # Encrypted messenger
     )
 
     # General scripts
