Update nvim config

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=44
+pkgrel=45
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -107,8 +107,13 @@ package_couldinho-base() {
     )
 
     install -Dm 0644 base/etc/gitconfig "$pkgdir/etc/gitconfig"
-    install -Dm 0644 base/usr/share/nvim/runtime/autoload/plug.vim \
-        "$pkgdir/usr/share/nvim/runtime/autoload/plug.vim"
+    install -Dm 0644 base/etc/xdg/nvim/couldinho-sysinit.vim \
+        "$pkgdir/etc/xdg/nvim/couldinho-sysinit.vim"
+    install -Dm 0644 base/etc/xdg/nvim/bootstrap.vim \
+        "$pkgdir/etc/xdg/nvim/bootstrap.vim"
+    install -Dm 0644 base/etc/xdg/nvim/plugins.vim \
+        "$pkgdir/etc/xdg/nvim/plugins.vim"
+    cp -r base/etc/xdg/nvim/modules "$pkgdir/etc/xdg/nvim/modules"
     
     # Base replacements
     depends+=(
