--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
 pkgver=1
-pkgrel=56
+pkgrel=57
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -393,6 +393,7 @@ package_couldinho-sec() {
         010editor               # Binary editor with templates
         ltrace                  # Trace library calls
         strace                  # Trace system calls and signals
+        binwalk                 # Find and extract file types within a file
     )
 
     # Network
