--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,5 +1,5 @@
 pkgbase='couldinho'
-pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-sec)
+pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
 pkgrel=72
 pkgdesc="Packages for couldinho systems"
