--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -146,7 +146,7 @@ package_couldinho-base() {
         prezto-git          # Configuration framework
         fzy                 # Fzy text selector
         lscolors-git        # Colours for ls
-        pydf                # Colourised version of df
+        dfrs                # Colourised version of df
     )
 
     install -Dm 0644 base/etc/zsh/antigen.zsh "$pkgdir/etc/zsh/antigen.zsh"
