--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
-pkgrel=73
+pkgrel=74
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -143,8 +143,7 @@ package_couldinho-base() {
     # Shell
     depends+=(
         zsh                 # Better shell
-        antigen-git         # Package manager
-        prezto-git          # Configuration framework
+        direnv              # Shell extension managing environment
         fzy                 # Fzy text selector
         lscolors-git        # Colours for ls
         dfrs                # Colourised version of df
