--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=1
-pkgrel=78
+pkgrel=79
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/dotfiles"
@@ -123,6 +123,7 @@ package_couldinho-base() {
     depends+=(
         exa                 # ls replacement
         ripgrep             # Fuzzy search
+        ripgrep-all         # ripgrep wrapper for multiple file types
         rmtrash             # Delete to bin
     )
 
